<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/monday" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tuesday" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/wednesday" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/thursday" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/friday" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:gravity="center"
                    android:text="@string/timer_1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:gravity="center"
                    android:text="@string/timer_2" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:gravity="center"
                    android:text="@string/timer_3" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:gravity="center"
                    android:text="@string/timer_4" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:gravity="center"
                    android:text="@string/timer_5" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:gravity="center"
                    android:text="@string/timer_6" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:gravity="center"
                    android:text="@string/timer_7" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:gravity="center"
                    android:text="@string/timer_8" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/mRecyclerView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>