<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp">

    <TextView
        android:id="@+id/timeValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/default_time_stopwatch"
        android:textSize="70sp"
        android:fontFamily="monospace"
        android:layout_centerInParent="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/startButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_ripple"
            android:text="@string/button_start"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/pauseButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/button_stop"
            android:textAppearance="?android:attr/textAppearanceLarge"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/continueButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_ripple"
            android:text="@string/button_resume"
            android:textAppearance="?android:attr/textAppearanceLarge"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/resetButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/button_reset"
            android:textAppearance="?android:attr/textAppearanceLarge"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:visibility="gone" />

    </LinearLayout>

</RelativeLayout>